[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartestate"
version = "0.3.0"
description = "Django site for real estate brokers"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Brian St. Hilaire", email = "brian.st-hilaire@sanctus-tech.com" }
]
dependencies = [
  "Django>=4.1",
  "datetime",
  "Pillow",
  "django-cookie-consent>=0.3.2",
  "djangorestframework",
  "django-widget-tweaks",
  "django-modeltranslation",
  "environs",
  "mysqlclient",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools]
packages = ["smartestate"]

[tool.setuptools.package-data]
"smartestate" = ["**/*.html", "**/*.css", "**/*.js", "**/*.json", "**/*.txt", "**/*.po", "**/*.mo"]

[project.urls]
Homepage = "https://github.com/saint-hilaire/smartestate"
Repository = "https://github.com/saint-hilaire/smartestate"
